# wst-eccentricity

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api.rst  conf.py  index.md  installation.md  quickstart.md
examples/: quickstart.ipynb  quickstart.py
src/wst_eccentricity/: __init__.py  data.py  datasets.py  io.py  metrics.py  models.py  pipeline.py  plotting.py  training.py  transforms.py
tests/: test_smoke.py
